--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -76,6 +76,7 @@ members = [
     "api/migration/migrations/v1.19.3/public-admin-container-v0-11-6",
     "api/migration/migrations/v1.19.3/aws-control-container-v0-7-10",
     "api/migration/migrations/v1.19.3/public-control-container-v0-7-10",
+    "api/migration/migrations/v1.20.0/add-ntp-default-options-v0-1-0",
 
     "bloodhound",
 
