--- a/Release.toml
+++ b/Release.toml
@@ -290,4 +290,5 @@ version = "1.20.0"
     "migrate_v1.20.0_host-containers-config-list-v0-1-0.lz4",
     "migrate_v1.20.0_corndog-config-file-v0-1-0.lz4",
     "migrate_v1.20.0_corndog-services-cfg-v0-1-0.lz4",
+    "migrate_v1.20.0_add-ntp-default-options-v0-1-0.lz4",
 ]
