--- a/sources/api/migration/migrations/v1.20.0/add-ntp-default-options-v0-1-0/Cargo.toml
+++ b/sources/api/migration/migrations/v1.20.0/add-ntp-default-options-v0-1-0/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "add-ntp-default-options"
+name = "add-ntp-default-options-v0-1-0"
 version = "0.1.0"
 authors = ["Dom Goodwin <domgoodwin@monzo.com>"]
 license = "Apache-2.0 OR MIT"
